# naegleria

./: Dockerfile  Dockerfile.assemble  Dockerfile.llvm  Dockerfile.wasm  Makefile  README.md  hello.s  main.c  main.ll  main.s
examples/: hello copy.b
examples/rp2350/: .gitignore  CMakeLists.txt  README.md  fetch-deps.sh  main.c
src/: compiler.php
src/compiler/: aarch64.php  amd64.php  arm.php  intel.php  llvm.php  php.php  riscv.php  ruby.php  wasm.php
